"Trailing slash in the api endpoint"